--- a/mpa_analysis/wdpa_prep.Rmd
+++ b/mpa_analysis/wdpa_prep.Rmd
@@ -110,8 +110,7 @@ poly_simplify <- function(poly_set, thresh, verbose = FALSE) {
 ### import WDPA database polygons from saved .shp
 dir_wdpa   <- file.path(dir_N, 'git-annex/globalprep/_raw_data/wdpa_mpa/WDPA_Jan2015_Public')
 lyr_wdpa    <- 'WDPA_poly_Jan2015'
-lyr_mpa     <- 'WDPA_poly_Jan2015_mpa'
-lyr_mpa_mar <- 'WDPA_poly_Jan2015_mpa_mar'
+lyr_mpa     <- 'WDPA_poly_Jan2015_mpa_i-iv-all'
 
 if(!file.exists(file.path(dir_wdpa, paste(lyr_mpa, '.shp', sep = '')))) {
   poly_wdpa <- readOGR(dsn = dir_wdpa, layer = lyr_wdpa, stringsAsFactors = FALSE)
@@ -126,41 +125,25 @@ if(!file.exists(file.path(dir_wdpa, paste(lyr_mpa, '.shp', sep = '')))) {
     left_join(prot_code_df, by = 'IUCN_CAT') %>%
     mutate(prot_code = ifelse(is.na(prot_code), 7, prot_code))
   
-  poly_mpa <- poly_wdpa[poly_wdpa@data$STATUS == 'Designated', ]
-  poly_mpa <- poly_mpa[poly_mpa@data$prot_code <= 4, ]
-  
-  poly_mpa_marine <- poly_mpa[poly_mpa@data$MARINE == 1, ]
+  poly_mpa <- poly_wdpa[poly_wdpa@data$prot_code <= 4, ]
+  #  poly_mpa <- poly_mpa[poly_mpa@data$STATUS == 'Designated', ]
+    
+  ### sort by STATUS_YR, descending, so gdal_rasterize will assign newer
+  ### values then overwrite (where applicable) with older values
+  poly_mpa <- poly_mpa[order(poly_mpa@data$STATUS_YR, decreasing = TRUE), ]
 
-  writeOGR(poly_mpa, dsn = dir_wdpa, layer = lyr_mpa,
-           driver = 'ESRI Shapefile', overwrite_layer = TRUE)
-  writeOGR(poly_mpa_marine, dsn = dir_wdpa, layer = lyr_mpa_mar,
-           driver = 'ESRI Shapefile', overwrite_layer = TRUE)
+  maptools::writePolyShape(poly_mpa, 
+                           fn = file.path(dir_wdpa, lyr_mpa))
+  ### copy .prj:
+  file.copy(from = file.path(dir_wdpa, paste(lyr_wdpa, '.prj', sep = '')), 
+            to = file.path(dir_wdpa, paste(lyr_mpa, '.prj', sep = '')))  
+
+# writeOGR(poly_mpa, dsn = dir_wdpa, layer = lyr_mpa,
+#            driver = 'ESRI Shapefile', overwrite_layer = TRUE)
+#   writeOGR(poly_mpa_marine, dsn = dir_wdpa, layer = lyr_mpa_mar,
+#            driver = 'ESRI Shapefile', overwrite_layer = TRUE)
 }
 
-poly_mpa <- readOGR(dir_wdpa, lyr_mpa, stringsAsFactors = FALSE)
-# poly_mpa <- readShapePoly(fn = file.path(dir_wdpa, lyr_mpa),
-#                           proj4string = crs_wgs84,
-#                           stringsAsFactors = FALSE)
-
-### create simplified polygon
-polys_mpa_area <- lapply(poly_mpa@polygons, function(x) x@area)
-poly_mpa1 <- poly_mpa[polys_mpa_area > 1e-5, ]
-poly_mpa1 <- poly_simplify(poly_mpa1, thresh = 1e-5, verbose = TRUE)
-
-### sort by STATUS_YR, descending, so gdal_rasterize will assign newer
-### values then overwrite (where applicable) with older values
-poly_mpa1 <- poly_mpa1[order(poly_mpa1@data$STATUS_YR, decreasing = TRUE), ]
-
-# writeOGR(poly_mpa1, dsn = dir_wdpa,
-#          layer = paste(lyr_mpa, '1', sep = ''),
-#          driver = 'ESRI Shapefile')
-maptools::writePolyShape(poly_mpa1, 
-                         fn = file.path(dir_wdpa, paste(lyr_mpa, '1', sep = '')))
-### copy .prj:
-file.copy(from = file.path(dir_wdpa, paste(lyr_mpa, '.prj', sep = '')), 
-          to = file.path(dir_wdpa, paste(lyr_mpa, '1.prj', sep = '')))
-
-  
 ```
 
 unique(poly_mpa@data$STATUS_YR)
@@ -172,12 +155,12 @@ summary(poly_mpa@data$STATUS_YR[poly_mpa@data$STATUS_YR > 0])
 dir_rast <- file.path(dir_anx, 'explore_am_v_iucn/mpa_rasters')
 
 ### Get source from WDPA_MPA data location
-src <- path.expand(file.path(dir_wdpa, paste(lyr_mpa, '1.shp', sep = '')))
+src <- path.expand(file.path(dir_wdpa, paste(lyr_mpa, '.shp', sep = '')))
 ### gdal_rasterize to temp directory
-tmp_dst <- file.path(dir_rast, 'tmp', paste(lyr_mpa, '1.tif', sep = '')) %>%
+tmp_dst <- file.path(dir_rast, 'tmp', paste(lyr_mpa, '.tif', sep = '')) %>%
   path.expand
 ### then writeRaster to final directory, to save smaller file
-fnl_dst <- file.path(dir_rast, paste(lyr_mpa, '1.tif', sep = '')) %>%
+fnl_dst <- file.path(dir_rast, paste(lyr_mpa, '.tif', sep = '')) %>%
   path.expand
   
 ### Set extents and resolution
@@ -208,6 +191,45 @@ raster::writeRaster(tmp_rast, fnl_dst,
 message('Write ', src, '\n  to ', fnl_dst, '; \n  ', round((proc.time() - ptm)[3], 2), ' seconds')
 remove(tmp_rast)
 unlink(tmp_dst)
+
+```
+
+
+``` {r set_up_wdpa_mpa_polys_klein}
+
+### import WDPA database polygons from saved .shp
+dir_rast <- file.path(dir_anx, 'explore_am_v_iucn/mpa_rasters')
+dir_wdpa   <- file.path(dir_rast, 'WDPA2014_mar_klein')
+lyr_wdpa    <- 'wdpa_all_mar_klein'
+lyr_mpa     <- 'wdpa_all_mar_klein_i-iv'
+
+if(!file.exists(file.path(dir_wdpa, paste(lyr_mpa, '.shp', sep = '')))) {
+  poly_wdpa <- readOGR(dsn = dir_wdpa, layer = lyr_wdpa, stringsAsFactors = FALSE)
+
+  prot_code_df <- data.frame('IUCN_CAT'  = c('Ia', 'Ib', 'II', 'III', 'IV', 'V', 'VI'),
+                             'prot_code' = c(  1,    1,    2,     3,    4,   5,    6))
+
+  poly_wdpa@data <- poly_wdpa@data %>%
+    left_join(prot_code_df, by = 'IUCN_CAT') %>%
+    mutate(prot_code = ifelse(is.na(prot_code), 7, prot_code))
+  
+  poly_mpa <- poly_wdpa[poly_wdpa@data$prot_code <= 4, ]
+  
+  # poly_mpa <- poly_mpa[poly_mpa@data$STATUS == 'Designated', ]
+
+  if(poly_mpa@proj4string@projargs != p4s_wgs84) {
+    message('Polygons not in WGS84 projection.  \n  Polygon projection: ', 
+            poly_mpa@proj4string@projargs)
+    poly_mpa <- spTransform(poly_mpa, crs_wgs84)
+  }
+  
+  poly_mpa <- poly_mpa[order(poly_mpa1@data$STATUS_YR, decreasing = TRUE), ]
+  
+  writeOGR(poly_mpa, dsn = dir_wdpa, layer = lyr_mpa,
+             driver = 'ESRI Shapefile', overwrite_layer = TRUE)
+  #   writeOGR(poly_mpa_marine, dsn = dir_wdpa, layer = lyr_mpa_mar,
+  #            driver = 'ESRI Shapefile', overwrite_layer = TRUE)
+}
 
 ```
 
